<resources>
    <string name="app_name">POS simulator</string>
    <string name="_0_00">0.00</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="clear">Clear</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="cancel">Cancel</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="enter">Enter</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="PayValue1">1</string>
    <string name="PayValue2">2</string>
    <string name="PayValue4">4</string>
    <string name="PayValue6">6</string>
    <string name="PayValue7">7</string>
    <string name="PayValue3">3</string>
    <string name="PayValue5">5</string>
    <string name="PayValue8">8</string>
    <string name="PayValue9">9</string>
    <string name="PayValue00">.00</string>
    <string name="PayValue0">0</string>
    <string name="EnterBtn">Enter</string>
    <string name="cancelBtn">Cancel</string>
    <string name="payable_amount">Payable Amount :</string>
    <string name="txtVamt">Rs 0.00</string>
    <string name="backspace">BackSpace</string>
    <string name="payBtn">Pay</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="retry">Retry</string>
    <string name="time_left">Time Left:</string>
</resources>